syntax = "proto3";

import "GRPC/Protos/base.proto";
import "GRPC/Protos/recurso.proto";
import "GRPC/Protos/tarefa.proto";
import "google/protobuf/empty.proto";

option csharp_namespace = "Cpnucleo.Infra.CrossCutting.Communication.GRPC.Protos.RecursoTarefa";

package recursoTarefa;

service RecursoTarefa {

	rpc Incluir (RecursoTarefaModel) returns (base.BaseReply);
	rpc Listar (google.protobuf.Empty) returns (ListarReply);
	rpc Consultar (base.BaseRequest) returns (RecursoTarefaModel);
	rpc Alterar (RecursoTarefaModel) returns (base.BaseReply);
	rpc Remover (base.BaseRequest) returns (base.BaseReply);
	rpc ListarPorTarefa (base.BaseRequest) returns (ListarPorTarefaReply);
}

message RecursoTarefaModel {

	string Id = 1;
	int32 PercentualTarefa = 2;
	string IdRecurso = 3;
	string IdTarefa = 4;
	int32 HorasDisponiveis = 5;
	string DataInclusao = 6;
	recurso.RecursoModel Recurso = 7;
	tarefa.TarefaModel Tarefa = 8;
}

message ListarReply {

    repeated RecursoTarefaModel Lista = 1;
}

message ListarPorTarefaReply {

    repeated RecursoTarefaModel Lista = 1;
}